Navbar section done

--- a/index.html
+++ b/index.html
@@ -3,9 +3,45 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!-- CSS links here  -->
+    <link rel="stylesheet" href="./styles/navbar.css">
+    <!-- Font-awesome link here  -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
     <title>Hospital</title>
 </head>
 <body>
-    Hospital project
+    <nav>
+        <!-- logo  -->
+        <div class="logo">
+            <span><i class="fas fa-heartbeat"></i></span>
+            <a href="#">Medcare.</a>
+        </div>
+        <!-- nav-items  -->
+        <div class="nav-items">
+            <ul>
+                <li><a href="#">Home</a></li>
+                <li><a href="#">Service</a></li>
+                <li><a href="#">About</a></li>
+                <li><a href="#">Doctors</a></li>
+                <li><a href="#">Book</a></li>
+                <li><a href="#">Review</a></li>
+                <li><a href="#">Blogs</a></li>
+            </ul>
+        </div>
+        <!-- bars  -->
+        <div class="bars" onclick="Toggle()">
+            <i class="fas fa-bars"></i>
+            <i class="fas fa-bars fa-times"></i>
+        </div>
+    </nav>
+    <section></section>
+
+
+
+
+
+
+    <!-- JS link here  -->
+    <script src="./js/script.js"></script>
 </body>
 </html>
