--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- CSS links here  -->
     <link rel="stylesheet" href="./styles/navbar.css">
+    <link rel="stylesheet" href="./styles/header.css">
     <!-- Font-awesome link here  -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
     <title>Hospital</title>
@@ -34,7 +35,18 @@
             <i class="fas fa-bars fa-times"></i>
         </div>
     </nav>
-    <section></section>
+    <section>
+        <div class="header">
+            <div class="header-gif">
+                <img src="./assets/home-img.svg" alt="home-img">
+            </div>
+            <div class="header-text">
+                <h1>Stay Safe, Stay Healthy</h1>
+                <p>Lorem Ipsum Dolor Sit Amet Consectetur Adipisicing Elit. Rem Sed Autem Vero? Magnam, Est Laboriosam!</p>
+                <button>Contact Us <span>></span></button>
+            </div>
+        </div>
+    </section>
 
 
 
