--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <!-- CSS links here  -->
     <link rel="stylesheet" href="./styles/navbar.css">
     <link rel="stylesheet" href="./styles/header.css">
+    <link rel="stylesheet" href="./styles/button.css">
     <!-- Font-awesome link here  -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
     <title>Hospital</title>
@@ -43,7 +44,7 @@
             <div class="header-text">
                 <h1>Stay Safe, Stay Healthy</h1>
                 <p>Lorem Ipsum Dolor Sit Amet Consectetur Adipisicing Elit. Rem Sed Autem Vero? Magnam, Est Laboriosam!</p>
-                <button>Contact Us <span>></span></button>
+                <a class="btn">Contact Us <span class="fa fa-angle-right"></span></a>
             </div>
         </div>
     </section>
