--- a/index.html
+++ b/index.html
@@ -7,11 +7,13 @@
     <link rel="stylesheet" href="./styles/navbar.css">
     <link rel="stylesheet" href="./styles/header.css">
     <link rel="stylesheet" href="./styles/button.css">
+    <link rel="stylesheet" href="./styles/result.css">
     <!-- Font-awesome link here  -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
     <title>Hospital</title>
 </head>
 <body>
+   
     <nav>
         <!-- logo  -->
         <div class="logo">
@@ -36,6 +38,10 @@
             <i class="fas fa-bars fa-times"></i>
         </div>
     </nav>
+
+
+
+     <!-- header section start  -->
     <section>
         <div class="header">
             <div class="header-gif">
@@ -48,9 +54,36 @@
             </div>
         </div>
     </section>
+    <!-- header section ends  -->
 
 
-
+     <!-- result section start  -->
+    <section>
+        <div class="result">
+            <div class="result-box">
+                <i class="fa fa-user-md"></i>
+                <b>140+</b>
+                <p>Doctors At Work</p>
+            </div>
+            <div class="result-box">
+                <i class="fa fa-users"></i>
+                <b>1040+</b>
+                <p>Satisfied Patients</p>
+            </div>
+            <div class="result-box">
+                <i class="fa fa-procedures"></i>
+                <b>500+</b>
+                <p>Bed Facility</p>
+            </div>
+            <div class="result-box">
+                <i class="fas fa-hospital"></i>
+                <b>80+</b>
+                <p>Available Hospitals</p>
+            </div>
+        </div>
+    </section>
+     <!-- result section ends  -->
+    
 
 
 
