--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="./styles/header.css">
     <link rel="stylesheet" href="./styles/button.css">
     <link rel="stylesheet" href="./styles/result.css">
+    <link rel="stylesheet" href="./styles/services.css">
     <!-- Font-awesome link here  -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
     <title>Hospital</title>
@@ -83,6 +84,56 @@
         </div>
     </section>
      <!-- result section ends  -->
+
+
+     <!-- SERVICES section start  -->
+     <section class="service-section">
+        <div class="section-title" id="services">
+            <span>our</span>
+            <span>SERVICES</span>
+        </div>
+        <div class="services">
+            <div class="services-box">
+                <i class="fas fa-notes-medical"></i>
+                <b>Free Checkups</b>
+                <p>Lorem Ipsum Dolor Sit Amet Consectetur, Adipisicing Elit. Ad, Omnis.</p>
+                <a class="btn">Learn more <span class="fa fa-angle-right"></span></a>
+            </div>
+            <div class="services-box">
+                <i class="fas fa-ambulance"></i>
+                <b>24/7 Ambulance</b>
+                <p>Lorem Ipsum Dolor Sit Amet Consectetur, Adipisicing Elit. Ad, Omnis.</p>
+                <a class="btn">Learn more <span class="fa fa-angle-right"></span></a>
+            </div>
+            <div class="services-box">
+                <i class="fa fa-user-md"></i>
+                <b>Expert Doctors</b>
+                <p>Lorem Ipsum Dolor Sit Amet Consectetur, Adipisicing Elit. Ad, Omnis.</p>
+                <a class="btn">Learn more <span class="fa fa-angle-right"></span></a>
+            </div>
+            <div class="services-box">
+                <i class="fas fa-pills"></i>
+                <b>Medicines</b>
+                <p>Lorem Ipsum Dolor Sit Amet Consectetur, Adipisicing Elit. Ad, Omnis.</p>
+                <a class="btn">Learn more <span class="fa fa-angle-right"></span></a>
+            </div>
+            <div class="services-box">
+                <i class="fas fa-procedures"></i>
+                <b>Bed Facility</b>
+                <p>Lorem Ipsum Dolor Sit Amet Consectetur, Adipisicing Elit. Ad, Omnis.</p>
+                <a class="btn">Learn more <span class="fa fa-angle-right"></span></a>
+            </div>
+            <div class="services-box">
+                <i class="fas fa-heartbeat"></i>
+                <b>Total Care</b>
+                <p>Lorem Ipsum Dolor Sit Amet Consectetur, Adipisicing Elit. Ad, Omnis.</p>
+                <a class="btn">Learn more <span class="fa fa-angle-right"></span></a>
+            </div>
+        </div>
+     </section>
+     <!-- SERVICES section ends  -->
+
+
     
 
 
