--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="./styles/button.css">
     <link rel="stylesheet" href="./styles/result.css">
     <link rel="stylesheet" href="./styles/services.css">
+    <link rel="stylesheet" href="./styles/doctors.css">
     <!-- Font-awesome link here  -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
     <title>Hospital</title>
@@ -133,7 +134,103 @@
      </section>
      <!-- SERVICES section ends  -->
 
+     <!-- ABOUT US start  -->
+     <section>
+        <div class="section-title" id="about-title">
+            <span>about</span>
+            <span>us</span>
+        </div>
+        <div class="header" id="about">
+            <div class="header-gif">
+                <img src="./assets/about-img.svg" alt="about-img">
+            </div>
+            <div class="header-text" id="about-text">
+                <h1>We Take Care Of Your Healthy Life</h1>
+                <p>Lorem Ipsum Dolor Sit Amet Consectetur, Adipisicing Elit. Iure Ducimus, Quod Ex Cupiditate Ullam In Assumenda Maiores Et Culpa Odit Tempora Ipsam Qui, Quisquam Quis Facere Iste Fuga, Minus Nesciunt.
+                <br><br>        
+                    Lorem Ipsum Dolor, Sit Amet Consectetur Adipisicing Elit. Natus Vero Ipsam Laborum Porro Voluptates Voluptatibus A Nihil Temporibus Deserunt Vel?</p>
+                <a class="btn">Learn more <span class="fa fa-angle-right"></span></a>
+            </div>
+        </div>
+     </section>
+     <!-- ABOUT US end  -->
 
+    <!-- doctors start -->
+    <section class="doctors-section">
+        <div class="section-title" id="services">
+            <span>our</span>
+            <span>DOCTORS</span>
+        </div>
+        <div class="doctors">
+            <div class="doctors-box">
+                <img src="./assets/doc-1.jpg" alt="doc-1">
+                <h1>John Doe</h1>
+                <p>Expert Doctor</p>
+                <div class="social-icons">
+                    <span class="fab fa-facebook"></span>
+                    <span class="fab fa-twitter"></span>
+                    <span class="fab fa-instagram"></span>
+                    <span class="fab fa-linkedin"></span>
+                </div>
+            </div>
+            <div class="doctors-box">
+                <img src="./assets/doc-2.jpg" alt="doc-2">
+                <h1>John Doe</h1>
+                <p>Expert Doctor</p>
+                <div class="social-icons">
+                    <span class="fab fa-facebook"></span>
+                    <span class="fab fa-twitter"></span>
+                    <span class="fab fa-instagram"></span>
+                    <span class="fab fa-linkedin"></span>
+                </div>
+            </div>
+            <div class="doctors-box">
+                <img src="./assets/doc-3.jpg" alt="doc-3">
+                <h1>John Doe</h1>
+                <p>Expert Doctor</p>
+                <div class="social-icons">
+                    <span class="fab fa-facebook"></span>
+                    <span class="fab fa-twitter"></span>
+                    <span class="fab fa-instagram"></span>
+                    <span class="fab fa-linkedin"></span>
+                </div>
+            </div>
+            <div class="doctors-box">
+                <img src="./assets/doc-4.jpg" alt="doc-4">
+                <h1>John Doe</h1>
+                <p>Expert Doctor</p>
+                <div class="social-icons">
+                    <span class="fab fa-facebook"></span>
+                    <span class="fab fa-twitter"></span>
+                    <span class="fab fa-instagram"></span>
+                    <span class="fab fa-linkedin"></span>
+                </div>
+            </div>
+            <div class="doctors-box">
+                <img src="./assets/doc-5.jpg" alt="doc-5">
+                <h1>John Doe</h1>
+                <p>Expert Doctor</p>
+                <div class="social-icons">
+                    <span class="fab fa-facebook"></span>
+                    <span class="fab fa-twitter"></span>
+                    <span class="fab fa-instagram"></span>
+                    <span class="fab fa-linkedin"></span>
+                </div>
+            </div>
+            <div class="doctors-box">
+                <img src="./assets/doc-6.jpg" alt="doc-6">
+                <h1>John Doe</h1>
+                <p>Expert Doctor</p>
+                <div class="social-icons">
+                    <span class="fab fa-facebook"></span>
+                    <span class="fab fa-twitter"></span>
+                    <span class="fab fa-instagram"></span>
+                    <span class="fab fa-linkedin"></span>
+                </div>
+            </div>
+        </div>
+    </section>
+    <!-- Doctors end -->
     
 
 
