--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <link rel="stylesheet" href="./styles/result.css">
     <link rel="stylesheet" href="./styles/services.css">
     <link rel="stylesheet" href="./styles/doctors.css">
+    <link rel="stylesheet" href="./styles/book.css">
     <!-- Font-awesome link here  -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
     <title>Hospital</title>
@@ -155,7 +156,7 @@
      </section>
      <!-- ABOUT US end  -->
 
-    <!-- doctors start -->
+    <!-- Doctors start -->
     <section class="doctors-section">
         <div class="section-title" id="services">
             <span>our</span>
@@ -231,6 +232,30 @@
         </div>
     </section>
     <!-- Doctors end -->
+
+    <!-- Book now start -->
+    <section class="booking-section">
+        <div class="section-title" id="services">
+            <span>BOOK</span>
+            <span>NOW</span>
+        </div>
+        <div class="booking">
+            <div class="booking-img">
+                <img src="./assets/book-img.svg" alt="book-img">
+            </div>
+            <div class="booking-form">
+                <form>
+                    <h1>Book Appointment</h1>
+                    <input type="text" placeholder="your name">
+                    <input type="number" placeholder="your phone number">
+                    <input type="email" placeholder="your email">
+                    <input type="date">
+                    <a class="btn">Book Now</a>
+                </form>
+            </div>
+        </div>
+    </section>
+    <!-- Book now end -->
     
 
 
