--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <link rel="stylesheet" href="./styles/services.css">
     <link rel="stylesheet" href="./styles/doctors.css">
     <link rel="stylesheet" href="./styles/book.css">
+    <link rel="stylesheet" href="./styles/clients.css">
     <!-- Font-awesome link here  -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
     <title>Hospital</title>
@@ -257,6 +258,66 @@
     </section>
     <!-- Book now end -->
     
+    <!-- Clients  start -->
+
+    <section class="clients-section">
+        <div class="section-title" id="about-title">
+            <span>CLIENT'S</span>
+            <span>REVIEW</span>
+        </div>
+        <div class="clients">
+            <div class="clients-box">
+                <div class="clients-box-header">
+                    <img src="./assets/pic-1.png" alt="pic-1">
+                    <p>John Doe</p>
+                    <div>
+                        <span class="fa fa-star"></span>
+                        <span class="fa fa-star"></span>
+                        <span class="fa fa-star"></span>
+                        <span class="fa fa-star"></span>
+                        <span class="fa fa-star-half-alt"></span>
+                    </div>
+                </div>
+                <div class="clients-box-footer">
+                    Lorem Ipsum Dolor Sit Amet Consectetur Adipisicing Elit. Laboriosam Sapiente Nihil Aperiam? Repellat Sequi Nisi Aliquid Perspiciatis Libero Nobis Rem Numquam Nesciunt Alias Sapiente Minus Voluptatem, Reiciendis Consequuntur Optio Dolorem!
+                </div>
+            </div>
+            <div class="clients-box">
+                <div class="clients-box-header">
+                    <img src="./assets/pic-2.png" alt="pic-2">
+                    <p>John Doe</p>
+                    <div>
+                        <span class="fa fa-star"></span>
+                        <span class="fa fa-star"></span>
+                        <span class="fa fa-star"></span>
+                        <span class="fa fa-star"></span>
+                        <span class="fa fa-star-half-alt"></span>
+                    </div>
+                </div>
+                <div class="clients-box-footer">
+                    Lorem Ipsum Dolor Sit Amet Consectetur Adipisicing Elit. Laboriosam Sapiente Nihil Aperiam? Repellat Sequi Nisi Aliquid Perspiciatis Libero Nobis Rem Numquam Nesciunt Alias Sapiente Minus Voluptatem, Reiciendis Consequuntur Optio Dolorem!
+                </div>
+            </div>
+            <div class="clients-box">
+                <div class="clients-box-header">
+                    <img src="./assets/pic-3.png" alt="pic-3">
+                    <p>John Doe</p>
+                    <div>
+                        <span class="fa fa-star"></span>
+                        <span class="fa fa-star"></span>
+                        <span class="fa fa-star"></span>
+                        <span class="fa fa-star"></span>
+                        <span class="fa fa-star-half-alt"></span>
+                    </div>
+                </div>
+                <div class="clients-box-footer">
+                    Lorem Ipsum Dolor Sit Amet Consectetur Adipisicing Elit. Laboriosam Sapiente Nihil Aperiam? Repellat Sequi Nisi Aliquid Perspiciatis Libero Nobis Rem Numquam Nesciunt Alias Sapiente Minus Voluptatem, Reiciendis Consequuntur Optio Dolorem!
+                </div>
+            </div>
+        </div>
+    </section>
+    <!-- Clients  end -->
+
 
 
 
