Footer and Blogs

--- a/index.html
+++ b/index.html
@@ -12,6 +12,8 @@
     <link rel="stylesheet" href="./styles/doctors.css">
     <link rel="stylesheet" href="./styles/book.css">
     <link rel="stylesheet" href="./styles/clients.css">
+    <link rel="stylesheet" href="./styles/blogs.css">
+    <link rel="stylesheet" href="./styles/footer.css">
     <!-- Font-awesome link here  -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
     <title>Hospital</title>
@@ -319,7 +321,92 @@
     <!-- Clients  end -->
 
 
+    <!-- OUR BLOGS  start -->
+    <section class="blogs-section">
+        <div class="section-title" id="services">
+            <span>OUR</span>
+            <span>BLOGS</span>
+        </div>
+        <div class="blogs">
+            <div class="blogs-box">
+                <img src="./assets/blog-1.jpg" alt="blog-1">
+                <div class="blogs-box-date">
+                    <div><span class="fas fa-calendar"></span> 25th August, 2022</div>
+                    <div><span class="fas fa-user"></span>  By Admin</div>
+                </div>
+                <h1>Blog Title Goes Here</h1>
+                <p>Lorem Ipsum, Dolor Sit Amet Consectetur Adipisicing Elit. Provident, Eius</p>
+                <a class="btn">Learn more <span class="fa fa-angle-right"></span></a>
+            </div>
+            <div class="blogs-box">
+                <img src="./assets/blog-2.jpg" alt="blog-2">
+                <div class="blogs-box-date">
+                    <div><span class="fas fa-calendar"></span> 25th August, 2022</div>
+                    <div><span class="fas fa-user"></span>  By Admin</div>
+                </div>
+                <h1>Blog Title Goes Here</h1>
+                <p>Lorem Ipsum, Dolor Sit Amet Consectetur Adipisicing Elit. Provident, Eius</p>
+                <a class="btn">Learn more <span class="fa fa-angle-right"></span></a>
+            </div>
+            <div class="blogs-box">
+                <img src="./assets/blog-3.jpg" alt="blog-3">
+                <div class="blogs-box-date">
+                    <div><span class="fas fa-calendar"></span> 25th August, 2022</div>
+                    <div><span class="fas fa-user"></span>  By Admin</div>
+                </div>
+                <h1>Blog Title Goes Here</h1>
+                <p>Lorem Ipsum, Dolor Sit Amet Consectetur Adipisicing Elit. Provident, Eius</p>
+                <a class="btn">Learn more <span class="fa fa-angle-right"></span></a>
+            </div>
+        </div>
+    </section>
+    <!-- OUR BLOGS  end -->
 
+    <!-- Footer  start -->
+
+    <section class="footer-section">
+        <div class="footer">
+            <div class="footer-box">
+                <h1>Quick Links</h1>
+                <a><span class="fa fa-angle-right"></span>Home</a>
+                <a><span class="fa fa-angle-right"></span>Service</a>
+                <a><span class="fa fa-angle-right"></span>About</a>
+                <a><span class="fa fa-angle-right"></span>Doctors</a>
+                <a><span class="fa fa-angle-right"></span>Book</a>
+                <a><span class="fa fa-angle-right"></span>Review</a>
+                <a><span class="fa fa-angle-right"></span>Blogs</a>
+            </div>
+            <div class="footer-box">
+                <h1>Our Services</h1>
+                <a><span class="fa fa-angle-right"></span>Dental Care</a>
+                <a><span class="fa fa-angle-right"></span>Message Therapy</a>
+                <a><span class="fa fa-angle-right"></span>Cardioloty</a>
+                <a><span class="fa fa-angle-right"></span>Diagnosis</a>
+                <a><span class="fa fa-angle-right"></span>Ambulance Service</a>
+            </div>
+            <div class="footer-box">
+                <h1>Contact Info</h1>
+                <a><span class="fa fa-phone"></span>+123-456-7890</a>
+                <a><span class="fa fa-phone"></span>+111-222-3333</a>
+                <a><span class="fa fa-envelope"></span>jamshidzayniev10@gmail.com</a>
+                <a><span class="fa fa-envelope"></span>suxrobdev@gmail.com</a>
+                <a><span class="fa fa-map-marker"></span>Karshi, Uzbekistan</a>
+            </div>
+            <div class="footer-box">
+                <h1>Follow Us</h1>
+                <a><span class="fab fa-facebook-f"></span>Facebook</a>
+                <a><span class="fab fa-twitter"></span>Twitter</a>
+                <a><span class="fab fa-telegram"></span>Telegram</a>
+                <a><span class="fab fa-instagram"></span>Instagram</a>
+                <a><span class="fab fa-linkedin"></span>LinkedIn</a>
+                <a><span class="fab fa-pinterest"></span>Pinterest</a>
+            </div>
+        </div>
+        <hr>
+        <div class="footer-title">Created By <span>Mr.Jamshid</span> | All Rights Reserved</div>
+    </section>
+
+    <!-- Footer  end -->
 
     <!-- JS link here  -->
     <script src="./js/script.js"></script>
