--- a/index.html
+++ b/index.html
@@ -29,13 +29,13 @@
         <!-- nav-items  -->
         <div class="nav-items">
             <ul>
-                <li><a href="#">Home</a></li>
-                <li><a href="#">Service</a></li>
-                <li><a href="#">About</a></li>
-                <li><a href="#">Doctors</a></li>
-                <li><a href="#">Book</a></li>
-                <li><a href="#">Review</a></li>
-                <li><a href="#">Blogs</a></li>
+                <li><a href="#home">Home</a></li>
+                <li><a href="#service">Service</a></li>
+                <li><a href="#about">About</a></li>
+                <li><a href="#doctors">Doctors</a></li>
+                <li><a href="#book">Book</a></li>
+                <li><a href="#review">Review</a></li>
+                <li><a href="#blogs">Blogs</a></li>
             </ul>
         </div>
         <!-- bars  -->
@@ -48,7 +48,7 @@
 
 
      <!-- header section start  -->
-    <section>
+    <section id="home">
         <div class="header">
             <div class="header-gif">
                 <img src="./assets/home-img.svg" alt="home-img">
@@ -92,7 +92,7 @@
 
 
      <!-- SERVICES section start  -->
-     <section class="service-section">
+     <section class="service-section" id="service">
         <div class="section-title" id="services">
             <span>our</span>
             <span>SERVICES</span>
@@ -139,7 +139,7 @@
      <!-- SERVICES section ends  -->
 
      <!-- ABOUT US start  -->
-     <section>
+     <section id="about">
         <div class="section-title" id="about-title">
             <span>about</span>
             <span>us</span>
@@ -160,7 +160,7 @@
      <!-- ABOUT US end  -->
 
     <!-- Doctors start -->
-    <section class="doctors-section">
+    <section class="doctors-section" id="doctors">
         <div class="section-title" id="services">
             <span>our</span>
             <span>DOCTORS</span>
@@ -237,7 +237,7 @@
     <!-- Doctors end -->
 
     <!-- Book now start -->
-    <section class="booking-section">
+    <section class="booking-section" id="book">
         <div class="section-title" id="services">
             <span>BOOK</span>
             <span>NOW</span>
@@ -262,7 +262,7 @@
     
     <!-- Clients  start -->
 
-    <section class="clients-section">
+    <section class="clients-section" id="review">
         <div class="section-title" id="about-title">
             <span>CLIENT'S</span>
             <span>REVIEW</span>
@@ -322,7 +322,7 @@
 
 
     <!-- OUR BLOGS  start -->
-    <section class="blogs-section">
+    <section class="blogs-section" id="blogs">
         <div class="section-title" id="services">
             <span>OUR</span>
             <span>BLOGS</span>
@@ -368,38 +368,38 @@
         <div class="footer">
             <div class="footer-box">
                 <h1>Quick Links</h1>
-                <a><span class="fa fa-angle-right"></span>Home</a>
-                <a><span class="fa fa-angle-right"></span>Service</a>
-                <a><span class="fa fa-angle-right"></span>About</a>
-                <a><span class="fa fa-angle-right"></span>Doctors</a>
-                <a><span class="fa fa-angle-right"></span>Book</a>
-                <a><span class="fa fa-angle-right"></span>Review</a>
-                <a><span class="fa fa-angle-right"></span>Blogs</a>
+                <a id="#home"><span class="fa fa-angle-right"></span>Home</a>
+                <a id="service"><span class="fa fa-angle-right"></span>Service</a>
+                <a id="about"><span class="fa fa-angle-right"></span>About</a>
+                <a id="doctors"><span class="fa fa-angle-right"></span>Doctors</a>
+                <a id="book"><span class="fa fa-angle-right"></span>Book</a>
+                <a id="review"><span class="fa fa-angle-right"></span>Review</a>
+                <a id="blogs"><span class="fa fa-angle-right"></span>Blogs</a>
             </div>
             <div class="footer-box">
                 <h1>Our Services</h1>
-                <a><span class="fa fa-angle-right"></span>Dental Care</a>
-                <a><span class="fa fa-angle-right"></span>Message Therapy</a>
-                <a><span class="fa fa-angle-right"></span>Cardioloty</a>
-                <a><span class="fa fa-angle-right"></span>Diagnosis</a>
-                <a><span class="fa fa-angle-right"></span>Ambulance Service</a>
+                <a id="service"><span class="fa fa-angle-right"></span>Dental Care</a>
+                <a id="service"><span class="fa fa-angle-right"></span>Message Therapy</a>
+                <a id="service"><span class="fa fa-angle-right"></span>Cardioloty</a>
+                <a id="service"><span class="fa fa-angle-right"></span>Diagnosis</a>
+                <a id="service"><span class="fa fa-angle-right"></span>Ambulance Service</a>
             </div>
             <div class="footer-box">
                 <h1>Contact Info</h1>
-                <a><span class="fa fa-phone"></span>+123-456-7890</a>
-                <a><span class="fa fa-phone"></span>+111-222-3333</a>
-                <a><span class="fa fa-envelope"></span>jamshidzayniev10@gmail.com</a>
-                <a><span class="fa fa-envelope"></span>suxrobdev@gmail.com</a>
-                <a><span class="fa fa-map-marker"></span>Karshi, Uzbekistan</a>
+                <a href="tel:+998908292171"><span class="fa fa-phone"></span>+123-456-7890</a>
+                <a  href="tel:+998908292171"><span class="fa fa-phone"></span>+111-222-3333</a>
+                <a href="jamshidzayniev10@gmail.com"><span class="fa fa-envelope"></span>jamshidzayniev10@gmail.com</a>
+                <a href="jamshidzayniev10@gmail.com"><span class="fa fa-envelope"></span>suxrobdev@gmail.com</a>
+                <a href="https://www.google.com/maps/place/Qarshi,+Qashqadaryo+Region,+Uzbekistan/@38.8582256,65.7093956,12z/data=!3m1!4b1!4m6!3m5!1s0x3f4ea63944a8e4c1:0x694369ac2037509d!8m2!3d38.8611918!4d65.7847269!16zL20vMGNiMG0?entry=ttu"><span class="fa fa-map-marker"></span>Karshi, Uzbekistan</a>
             </div>
             <div class="footer-box">
                 <h1>Follow Us</h1>
-                <a><span class="fab fa-facebook-f"></span>Facebook</a>
-                <a><span class="fab fa-twitter"></span>Twitter</a>
-                <a><span class="fab fa-telegram"></span>Telegram</a>
-                <a><span class="fab fa-instagram"></span>Instagram</a>
-                <a><span class="fab fa-linkedin"></span>LinkedIn</a>
-                <a><span class="fab fa-pinterest"></span>Pinterest</a>
+                <a href="https://t.me/jamzayn10"><span class="fab fa-facebook-f"></span>Facebook</a>
+                <a href="https://t.me/jamzayn10" ><span class="fab fa-twitter"></span>Twitter</a>
+                <a href="https://t.me/jamzayn10"><span class="fab fa-telegram"></span>Telegram</a>
+                <a href="https://t.me/jamzayn10"><span class="fab fa-instagram"></span>Instagram</a>
+                <a href="https://t.me/jamzayn10"><span class="fab fa-linkedin"></span>LinkedIn</a>
+                <a href="https://t.me/jamzayn10"><span class="fab fa-pinterest"></span>Pinterest</a>
             </div>
         </div>
         <hr>
