--- a/index.html
+++ b/index.html
@@ -368,21 +368,21 @@
         <div class="footer">
             <div class="footer-box">
                 <h1>Quick Links</h1>
-                <a id="#home"><span class="fa fa-angle-right"></span>Home</a>
-                <a id="service"><span class="fa fa-angle-right"></span>Service</a>
-                <a id="about"><span class="fa fa-angle-right"></span>About</a>
-                <a id="doctors"><span class="fa fa-angle-right"></span>Doctors</a>
-                <a id="book"><span class="fa fa-angle-right"></span>Book</a>
-                <a id="review"><span class="fa fa-angle-right"></span>Review</a>
-                <a id="blogs"><span class="fa fa-angle-right"></span>Blogs</a>
+                <a herf="#home"><span class="fa fa-angle-right"></span>Home</a>
+                <a herf="#service"><span class="fa fa-angle-right"></span>Service</a>
+                <a herf="#about"><span class="fa fa-angle-right"></span>About</a>
+                <a herf="#doctors"><span class="fa fa-angle-right"></span>Doctors</a>
+                <a herf="#book"><span class="fa fa-angle-right"></span>Book</a>
+                <a herf="#review"><span class="fa fa-angle-right"></span>Review</a>
+                <a herf="#blogs"><span class="fa fa-angle-right"></span>Blogs</a>
             </div>
             <div class="footer-box">
                 <h1>Our Services</h1>
-                <a id="service"><span class="fa fa-angle-right"></span>Dental Care</a>
-                <a id="service"><span class="fa fa-angle-right"></span>Message Therapy</a>
-                <a id="service"><span class="fa fa-angle-right"></span>Cardioloty</a>
-                <a id="service"><span class="fa fa-angle-right"></span>Diagnosis</a>
-                <a id="service"><span class="fa fa-angle-right"></span>Ambulance Service</a>
+                <a herf="#service"><span class="fa fa-angle-right"></span>Dental Care</a>
+                <a herf="#service"><span class="fa fa-angle-right"></span>Message Therapy</a>
+                <a herf="#service"><span class="fa fa-angle-right"></span>Cardioloty</a>
+                <a herf="#service"><span class="fa fa-angle-right"></span>Diagnosis</a>
+                <a herf="#service"><span class="fa fa-angle-right"></span>Ambulance Service</a>
             </div>
             <div class="footer-box">
                 <h1>Contact Info</h1>
